Stylesheet/emote/tag updates 2014-06-22

--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,3 +1,11 @@
+/*testest*/
+
+.side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
+.side .titlebox h6:hover {bottom:-75px; transition: bottom 1s;}
+
+/*letestestend*/
+
+
 a[href|="/filly"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%filly-table%%)!important}
 
@@ -218,6 +226,16 @@ a[href="/flitterheart"] {
     Width: 124px;
     Height: 201px;
     background-image: url(%%flitterheart%%)
+}
+
+a[href="/moist"] {
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 200px;
+    Height: 200px;
+    background-image: url(%%moist%%)
 }
 
 a[href="/twikillme"] {
