--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -461,13 +461,13 @@ a[href|="/calamityangry"]{  background-position: -294px -1110px; width: 150px; h
 a[href|="/calamityhandsome"]{  background-position: -294px -1293px; width: 150px; height: 149px; }
 a[href|="/velvetparty"]{  background-position: -294px -1492px; width: 150px; height: 89px; }
 
-a[href|="/batpip"],a[href|="/velvetsocks"],a[href|="/velvetnudge"],a[href|="/velvetfrown"],a[href|="/velvetskip"], a[href|="/lpdatplot"]
+a[href|="/batpip"],a[href|="/velvetsocks"],a[href|="/velvetnudge"],a[href|="/velvetfrown"],a[href|="/velvetskip"], a[href|="/lpdatplot"], a[href|="/lpgiddy"], a[href|="/bjpanic"], a[href|="/bjsquee"], a[href|="/bjcool"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em8-v02%%);
+background-image: url(%%foe-em8-v03%%);
 }
 a[href|="/batpip"]{  background-position: 0 0; width: 123px; height: 150px; }
 a[href|="/velvetsocks"]{  background-position: 0 -200px; width: 150px; height: 121px; }
@@ -475,6 +475,10 @@ a[href|="/velvetnudge"]{  background-position: 0 -371px; width: 143px; height: 1
 a[href|="/velvetfrown"]{  background-position: 0 -571px; width: 150px; height: 130px; }
 a[href|="/velvetskip"]{  background-position: 0 -751px; width: 150px; height: 118px; }
 a[href|="/lpdatplot"]{   background-position: 0 -919px; width: 120px; height: 141px; }
+a[href|="/lpgiddy"]{   background-position: 0 -1110px; width: 83px; height: 100px; }
+a[href|="/bjpanic"]{   background-position: 0 -1260px; width: 102px; height: 100px; }
+a[href|="/bjsquee"]{   background-position: 0 -1410px; width: 83px; height: 100px; }
+a[href|="/bjcool"]{   background-position: 0 -1560px; width: 70px; height: 75px; }
 
 a[href|="/advicebj"]
 {
