--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -53,14 +53,15 @@ Added emotes (1/15/13)
 }
 
 */
-/* Comic Sans MC
+/* Comic Sans MC */
 
     body {
     font-family:"Comic Sans MS", "Comic Sans";
     }
-*/
 
-/*body
+
+
+/* body
 {
 	font-family:comicsans !important;
 }
@@ -83,7 +84,8 @@ Added emotes (1/15/13)
     font-family: "comicsans";
 
     }
-*/
+*/ 
+
 /* Background*/
 
 /* Save this for later
