--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,33 @@
+a[href^="/redtoxinbob"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 90px;
+    height: 140px;
+    background-image: url(%%redtoxinbob%%)
+    }
+
+a[href^="/lbexcited"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 164px;
+    height: 140px;
+    background-image: url(%%lbexcited%%)
+    }
+
+a[href^="/lbbob"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 72px;
+    height: 140px;
+    background-image: url(%%lbbob%%)
+    }
+
 a[href^="/lbclop"] {
     background-position: 0px 0px;
     display: block;
