Stylesheet/emote/tag updates 2014-07-01

--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -704,7 +704,7 @@ background-color: #75C875 !important; color: #FFFFFF !important;
 /**** ----------------announcement bar----------------- ****/
 
 body >.content >.sharelink ~ .sitetable:before { 
-content: "Spoiler alert: Apples!"; 
+content: "Welcome to the Appleplounge. All your apple are belong to dead."; 
 background-color: #FFFFFF;
 border: 1px solid #009900;
 
