--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -444,7 +444,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
     color: black;
     border: 0;
     border-radius: 0;
-    background-image: url(%%flairsmod%%);
+    background-image: url(%%flairs%%);
     display: inline-block;
     width: 16px;
     height: 16px;
@@ -520,12 +520,13 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-spitfire { background-position: -200% -1600%; }
 .flair-mayormare { background-position: -300% -1600%; }
 .flair-soarin { background-position: -100% -1700%; }
+.flair-maudpie { background-position: -200% -1700%; }
+.flair-spike { background-position: -300% -1700%; }
 .flair-sunsetshimmer { background-position: 0 -1800%; }
-.flair-snowdrop { background-position: -100% -1800%; }
+.flair-cheesesandwich { background-position: -100% -1800%; }
 .flair-flashsentry { background-position: -200% -1800%; }
 .flair-cocopommel { background-position: -300% -1800%; }
 .flair-surprise { background-position: 0 -1900%; }
 .flair-applefritter { background-position: -100% -1900%; }
-.flair-cheesesandwich { background-position: -200% -1900%; }
-.flair-maudpie { background-position: -300% -1900%; }
-.flair-blossomforth { background-position: 0 -2000%; }
+.flair-snowdrop { background-position: -200% -1900%; }
+.flair-blossomforth { background-position: -300% -1900%; }
