--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -928,7 +928,23 @@ background-repeat:no-repeat;
 background-image:url(%%cclaugh%%);
 }
 
-/*un-assigned end*/
+a[href|="/fillycclying"] {
+float:left;
+width:146px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%fillycclying%%);
+}
+
+a[href|="/fillyflitterooh"] {
+float:left;
+width:108px;
+height:180px;
+background-repeat:no-repeat;
+background-image:url(%%fillyflitterooh%%);
+}
+
+/*un-assigned end - 47 Images*/
 
 a.author[href$="LunarMist2"] {  
 font-size:0!important;  
