--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -806,7 +806,7 @@ a.author[href$="mrjoker7854"]:before {content:"Sailor Pinkie Scratchtacularin"}
 a.author[href$="Conky_"]:before {content:"Sailor Conky"}
 a.author[href$="PartOfAShoe"]:before {content:"Sailor Welt"}
 a.author[href$="shawa666"]:before {content:"Sailor Slowpoke666"}
-a.author[href$="Avebone"]:before {content:"Sailor of Foodmanes"}
+a.author[href$="Avebone"]:before {content:"Sailor Foodmane"}
 a.author[href$="Qwerty439"]:before {content:"Sailor Asdfgh439"}
 a.author[href$="NeonSequitur"]:before {content:"Sailor Hunter x Hunter"}
 a.author[href$="viper9172"]:before {content:"Sailor Sidelong"}
