--- a/source-css/scratchquisition.css
+++ b/source-css/scratchquisition.css
@@ -441,6 +441,56 @@ a[href|="/scratchglomp"]
     height: 150px;
 }
 
+a[href|="/djpink3"]
+{
+ background-image: url(%%djpink3%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 208px;
+    height: 150px;
+}
+
+a[href|="/vinylchicken"]
+{
+ background-image: url(%%vinylchicken%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 162px;
+    height: 150px;
+}
+
+a[href|="/vinylpie"]
+{
+ background-image: url(%%vinylpie%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 172px;
+    height: 150px;
+}
+
+a[href|="/vinylpienibble"]
+{
+ background-image: url(%%vinylpienibble%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 159px;
+    height: 150px;
+}
+
+a[href|="/wubbutt"]
+{
+ background-image: url(%%wubbutt%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 200px;
+    height: 150px;
+}
+
 /*Other emotes*/
 a[href|="/helixfossil"] 
 {
