--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -159,7 +159,7 @@ border-top-right-radius: 5px;
 
 /*Replaces self post and NSFW thumbnail with Fine Line*/
 .thumbnail.self {
-    background-image: url(%%flselfthumbnail22%%);
+    background-image: url(%%flsmilerandbrigshgisathumbnail%%);
     background-repeat: no-repeat;
     width: 70px;
     height: 70px;
