--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -68,7 +68,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%rarifooter%%);
+ background-image:url(%%rdfooter%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
@@ -85,12 +85,12 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  .sidebox.create .morelink {display: none;}
 
 body {
-    background: url('%%raribg%%') no-repeat fixed right bottom !important;
+    background: url('%%rdbg%%') no-repeat fixed right bottom !important;
     background-color:#ffffff !important;
 } 
 
 #header #header-bottom-left {
-   background: url(%%rarityheader%%) !important;
+   background: url(%%rdheader%%) !important;
    background-repeat: no-repeat !important;
    background-position: 50% 100% !important;
    height: 205px; 
