--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -423,7 +423,7 @@ a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"],
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150c 'motes */
-a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"], a[href|="/nothisisbait"], a[href|="/everythingisbait"]
+a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"], a[href|="/nothisisbait"], a[href|="/everythingisbait"], a[href|="/crazylestia"], a[href|="/twilikethis"], a[href|="/celcrazy"]
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -468,7 +468,7 @@ a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Misfits g */
-a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitfirespitfire"], a[href|="/rdcheesehead"], a[href|="/notenoughapples"], a[href|="/notenoughdash"], a[href|="/notenoughrainbows"]
+a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitfirespitfire"], a[href|="/rdcheesehead"], a[href|="/notenoughapples"], a[href|="/notenoughdash"], a[href|="/notenoughrainbows"], a[href|="/twipjs"], a[href|="/twistunned"], a[href|="/twicanteven"]
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -530,15 +530,15 @@ a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"], a[href|="
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
-a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/nerdshy"], a[href|="/lunaselfcest"]
+a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/nerdshy"], a[href|="/lunaselfcest"], a[href|="/crazylestia"]
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
-a[href|="/twilightyay"], a[href|="/twidoubt"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"]
+a[href|="/twilightyay"], a[href|="/twidoubt"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"]
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-a[href|="/tiadisapproval"], a[href|="/ppdoubt"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"]
+a[href|="/tiadisapproval"], a[href|="/ppdoubt"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"]
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
@@ -882,3 +882,5 @@ a[href|="/spitfirespitfire"] {width:200px;height:148px;background-position: -176
 a[href|="/rdcheesehead"] {width:126px;height:200px;background-position: 0 -150px;}
 a[href|="/notenoughapples"] {width:123px;height:150px;background-position: -376px 0;}
 a[href|="/notenoughdash"], a[href|="/notenoughrainbows"] {width:121px;height:150px;background-position: -499px 0;}
+a[href|="/twipjs"] {width:200px;height:136px;background-position: -126px -150px;}
+a[href|="/twistunned"], a[href|="/twicanteven"] {width:200px;height:122px;background-position: -126px -286px;}
