--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -1,6 +1,6 @@
 /* /r/ponymotesextra CSS!
  * Just animotes from /r/PonyMotes really.
- * Image Count: 28/50
+ * Image Count: 34/50 - It looks like /r/ponymotesextra2 is on the horizon.
  */
 
 /* Animated Emotes */
@@ -37,6 +37,7 @@ a[href|="/rainbowdansen"] {background-image: url(%%rainbowdansen%%);width:165px;
 a[href|="/megameh"] {background-image: url(%%megameh%%);width:230px;height:194px;display:block;float:left;}
 a[href|="/pinkiefedora"] {background-image: url(%%pinkiefedora%%);width:200px;height:115px;display:block;float:left;}
 a[href|="/scootatrot"] {background-image: url(%%scootatrot%%);width:100px;height:96px;display:block;float:left;}
+a[href|="/sitandspin"] {background-image: url(%%sitandspin%%);width:140px;height:200px;display:block;float:left;}
 
 /*
  ************
