--- a/source-css/roseluck.css
+++ b/source-css/roseluck.css
@@ -74,6 +74,15 @@ height: 70px;
 background-image: url(%%emotes1%%) !important
 }
 
+a[href|="/tuckels"] {
+display: block;
+clear: none;
+float: left;
+width: 500px;
+height: 500px;
+background-image: url(%%banana%%) !important
+}
+
 a[href|="/rose1"]
 {background-position: -0px -0px}
 a[href|="/rose2"]
