--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -583,6 +583,9 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-spike
 {background-position: -300% -1700%}
 
+.flair-blossomforth
+{background-position: -300% -1900%}
+
 .flair-roidrage
 {background-position: 0 -2000%}
 
