--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,13 @@
+a[href^="/deepcelebounce"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 97px;
+    height: 85px;
+    background-image: url(%%deepcelebounce%%)
+    }
+
 a[href^="/redtoxinbob"] {
     background-position: 0px 0px;
     display: block;
@@ -260,7 +270,7 @@ a[href^="/gottaspinfast"] {
     }
 
 
-a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"]
+a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalutez"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"]
 
  {
     display: block;
@@ -269,19 +279,19 @@ a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[hr
     background-image: url(%%pngsheet1%%) !important
     }
 
-a[href|="/longbonstairs"] {
+a[href|="/longbonz"] {
     width: 140px;
     height: 140px;
     background-position: -0px -0px
     }
 a[href|="/longbonstairs"] {
     width: 140px;
-    height: 167px;
+    height: 175px;
     background-position: -140px -0px
     }
 a[href|="/skippytherock"] {
     width: 140px;
-    height: 99px;
+    height: 100px;
     background-position: -280px -0px
     }
 a[href|="/hoo2"] {
@@ -307,8 +317,63 @@ a[href|="/talltwi"] {
     height: 140px;
     background-position: -140px -210px
     }
-a[href|="/lbsalute"] {
-    width: 165px;
+a[href|="/lbsalutez"] {
+    width: 161px;
     height: 140px;
     background-position: -233px -210px
+    }
+a[href|="/lbcomicscrunch"] {
+    width: 93px;
+    height: 140px;
+    background-position: -394px -210px
+    }
+a[href|="/lbdive"] {
+    width: 120px;
+    height: 140px;
+    background-position: -487px -210px
+    }
+a[href|="/lbintro"] {
+    width: 222px;
+    height: 140px;
+    background-position: -0px -350px
+    }
+a[href|="/lbohthis"] {
+    width: 102px;
+    height: 140px;
+    background-position: -222px -350px
+    }
+a[href|="/lbpushthebutton"] {
+    width: 238px;
+    height: 140px;
+    background-position: -324px -350px
+    }
+a[href|="/lbglance"] {
+    width: 167px;
+    height: 140px;
+    background-position: -324px -350px
+    }
+a[href|="/lbrearing"] {
+    width: 100px;
+    height: 140px;
+    background-position: -562px -350px
+    }
+a[href|="/lbrelaxing"] {
+    width: 152px;
+    height: 140px;
+    background-position: -0px -490px
+    }
+a[href|="/lbwalk"] {
+    width: 134px;
+    height: 140px;
+    background-position: -152px -490px
+    }
+a[href|="/lbshrug"] {
+    width: 72px;
+    height: 70px;
+    background-position: -0px -140px
+    }
+a[href|="/lbteeny"] {
+    width: 50px;
+    height: 50px;
+    background-position: -72px -160px
     }
