--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,3 +1,7 @@
+.author[href="http://www.reddit.com/user/therosebudpony"]:after
+{    content:url(%%heart%%)
+}
+
 /*testest*/
 
 .side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
@@ -30,7 +34,7 @@ a[href|="/filly"]
 /*Roseluck*/
 .usertext input[value$="4"] + .usertext-body a[href="/filly"]{background-position:0 -500%}
 
-/*Princess Celestia*/
+/*Princess Sun*/
 .usertext input[value$="7"] + .usertext-body a[href="/filly"]{background-position:0 -600%}
 
 /*Princess Cadance*/
@@ -126,7 +130,7 @@ a[href|="/filly"]
 
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
 
-.author[href$="/Mr.Celestia"]:after {content: ' Of Boxxy ';}
+.author[href$="/Mr.Sun"]:after {content: ' Of Boxxy ';}
 
 .author:before {content: 'Queen ';}
 
@@ -138,70 +142,7 @@ a[href|="/filly"]
     background: url(%%goddamnlochnessmonster%%) no-repeat 0 5px;
 }
 
-/*HAPPY BIRTHDAY ROSEBUD! 
-
-                          -Apple*/
-/* Tenks
-                          -Pear*/
-
 /*End of [REDACTED]*/
-
-/* CHANGE NSFW TO NSFR */
-.marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
-{
- font-size:0px!important;
- display:inline-block;
- vertical-align:top;
- overflow:hidden;
- letter-spacing:-20px;
- content:""
-}
-
-.unmarknsfw-button a[href="#"]:before, .marknsfw-button a[href="#"]:before
-{
- font-size:10px!important;
- display:block;
- letter-spacing:normal;
- content:"NSFR"
-}
-.unmarknsfw-button a[href="#"]:before{content:"un-NSFR";}
-
-.nsfw-stamp acronym
-{
- border:#5F99CF 1px solid!important;
- display:inline-block;
- font-size:0px!important;
- letter-spacing:0px;
- overflow:hidden;
- vertical-align:bottom;
- margin-bottom:-1px;
- content:""
-}
-
-.nsfw-stamp acronym:after
-{ 
- color:#336699!important;
- content:"NSFR"!important;
- display:block;
- font-size:x-small!important;
- text-decoration:none;
- margin: -15px 2px 1px;
-}
-div.over18 .entry .buttons .first{padding-left: 0px}
-.footer-parent
-{
- height:500px;
- padding-bottom:0px;
- clear:both;
- text-align:center;
- width:100%;
-}
-
-/*I don't know who organized the stylesheet, but noice job */
-
-/* thanks */
-
-/*No problem*/
 
 /* HEADER */
 #header { background: url(%%up%%); }
@@ -817,4 +758,3 @@ a[href="/intensifies2"]:after {
 }
 
 /*ERGRHGTBTRGBFGBF*/
-
